# hako

./: .gitattributes  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  justfile  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: dto.rs  event.rs  lib.rs  openapi.rs  progress.rs
crates/api/tests/: wire_shapes.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: flow_validation.rs
crates/cli/tests/fixtures/: bad-duration.toml  datetime.toml  misspelled-kernel.toml  misspelled-key.toml  nonfinite.toml  out-of-range.toml  syntax-error.toml  unknown-slot.toml
crates/engine/: Cargo.toml
crates/engine/src/: agent.rs  budget.rs  event.rs  flow.rs  invocation.rs  kernel.rs  lib.rs  preamble.rs  progress.rs  ralph.rs  report.rs  run.rs  sandbox.rs  secrets.rs  store.rs  verify.rs  workspace.rs
crates/engine/src/agents/: claude.rs  cmd.rs  codex.rs  mod.rs
crates/engine/src/pipeline/: contract.rs  frame.rs  mod.rs
crates/engine/src/pipeline/prompts/: deliver.md  implement.md  plan.md  review.md  simplify.md
crates/engine/src/workspace/: mod.rs  prepare.rs
crates/engine/tests/: agents.rs  flow_schema_agreement.rs  invocation.rs  pipeline.rs  ralph.rs  seam_fakes.rs  store.rs  wire_shapes.rs
crates/hako-api/: Cargo.toml
crates/hako-api/src/: dto.rs  event.rs  lib.rs  openapi.rs  run.rs
crates/hako-api/tests/: wire_shapes.rs
crates/hako-cli/: Cargo.toml
crates/hako-cli/src/: main.rs
crates/hako-engine/: Cargo.toml
crates/hako-engine/src/: budget.rs  event.rs  lib.rs  notify.rs  progress.rs  run.rs  sandbox.rs
crates/hako-engine/tests/: seam_fakes.rs  wire_shapes.rs
crates/hako-engine/tests/fixtures/: run_events.jsonl
crates/hako-sandbox/: Cargo.toml
crates/hako-sandbox/src/: lib.rs
crates/hako-server/: Cargo.toml
crates/hako-server/src/: main.rs
crates/proto/: Cargo.toml
crates/proto/src/: budget.rs  event.rs  flow.rs  lib.rs  pipeline.rs  progress.rs  report.rs  run.rs  schema.rs  secrets.rs
crates/proto/tests/: run_events.rs  wire_shapes.rs
crates/proto/tests/fixtures/: run_events.jsonl
crates/sandbox/: Cargo.toml
crates/sandbox/src/: command.rs  lib.rs
crates/sandbox/tests/: fake_binary.rs  smolvm.rs
crates/server/: Cargo.toml
crates/server/src/: http.rs  lib.rs  main.rs  registry.rs  runtime.rs
crates/server/tests/: http.rs
docs/: DOCS_INDEX.md  GLOSSARY.md
docs/adr/: 0001-kernels-own-control-flow.md  0002-always-daemon.md  0003-fresh-vm-per-iteration.md  0004-smolvm-behind-sandbox-trait.md  0005-rest-sse-over-event-log.md  0006-engine-as-library-six-seams.md  0007-progress-report-verified-done.md  0008-shared-proto-crate.md  0009-flow-language-in-proto.md  0010-kernel-dialects-in-proto-closed-set.md  0011-kernel-owned-status-parse-and-repair.md
docs/agents/: domain.md  triage-labels.md
examples/: minimal.toml  pipeline.toml  ralph.toml
schemas/: flow.schema.json
schemas/report/pipeline/: deliver.schema.json  implement.schema.json  plan.schema.json  review.schema.json  simplify.schema.json
xtask/: Cargo.toml
xtask/src/: deps.rs  main.rs  metadata.rs  schema.rs
xtask/tests/: flow_schema_agreement.rs  pipeline_schema_agreement.rs  report_schema_agreement.rs
xtask/tests/common/: mod.rs
