[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
api = { path = "crates/api" }
engine = { path = "crates/engine" }
proto = { path = "crates/proto" }
sandbox = { path = "crates/sandbox" }

async-trait = "0.1.89"
futures-core = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = "1.52.3"
utoipa = "5.5.0"
