[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
api = { path = "crates/api" }
engine = { path = "crates/engine" }
proto = { path = "crates/proto" }
sandbox = { path = "crates/sandbox" }

async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
futures-core = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
# Schema-agreement tests only (product code parses with proto's flow
# types); the resolve-* defaults would pull HTTP/TLS.
jsonschema = { version = "0.47.0", default-features = false }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.52.3"
toml = "1.1.3"
utoipa = "5.5.0"
