[workspace]
resolver = "3"
members = ["crates/*", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
publish = false

[workspace.dependencies]
api = { path = "crates/api" }
engine = { path = "crates/engine" }
proto = { path = "crates/proto" }
sandbox = { path = "crates/sandbox" }

async-trait = "0.1.89"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
clap = { version = "4.6.1", features = ["derive"] }
constant_time_eq = "0.5.0"
futures-core = "0.3.32"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
http-body-util = "0.1.3"
# Event-log timestamps only — instant + RFC 3339; the tz features
# would bundle a timezone database the engine never consults.
jiff = { version = "0.2.32", default-features = false, features = ["std"] }
# Schema-agreement tests only (product code parses with proto's flow
# types); the resolve-* defaults would pull HTTP/TLS.
jsonschema = { version = "0.47.0", default-features = false }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = "1.52.3"
toml = "1.1.3"
tower = { version = "0.5.3", features = ["util"] }
utoipa = "5.5.0"
uuid = { version = "1.24.0", features = ["v7"] }
