[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
anyhow = "1.0.103"
cargo_metadata = "0.23.1"
proto = { workspace = true, features = ["schema"] }
schemars.workspace = true
serde_json.workspace = true

[dev-dependencies]
jsonschema.workspace = true
toml.workspace = true
