[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "hako"
path = "src/main.rs"

[dependencies]
api.workspace = true
clap.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
toml.workspace = true
