[package]
name = "engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
futures-core.workspace = true
proto.workspace = true
schemars.workspace = true
serde.workspace = true
# The schema generator's bounds transform builds JSON values directly.
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
futures-util.workspace = true
jsonschema.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
