[package]
name = "hako-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
futures-core.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
futures-util.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
