[package]
name = "proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
utoipa = { workspace = true, optional = true }

[features]
openapi = ["dep:utoipa"]
# schemars derives for the flow types, enabled by xtask to generate the
# committed flow schema; product crates build without them.
schema = ["dep:schemars"]
