[package]
name = "server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[[bin]]
name = "hakod"
path = "src/main.rs"

[dependencies]
api.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
constant_time_eq.workspace = true
engine.workspace = true
futures-util.workspace = true
sandbox.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tempfile.workspace = true
tower.workspace = true
